--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ notifications:
   email: false
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("LZ4"); Pkg.test("LZ4"; coverage=true)'
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("CodecLz4"); Pkg.test("CodecLz4"; coverage=true)'
 after_success:
-  - julia -e 'cd(Pkg.dir("LZ4")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
-  - julia -e 'Pkg.add("Documenter"); cd(Pkg.dir("LZ4")); include(joinpath("docs", "make.jl"))'
+  - julia -e 'cd(Pkg.dir("CodecLz4")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+  - julia -e 'Pkg.add("Documenter"); cd(Pkg.dir("CodecLz4")); include(joinpath("docs", "make.jl"))'
