--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ os:
   - osx
 julia:
   - 0.6
+  - 0.7
+  - 1.0
   - nightly
 matrix:
   allow_failures:
@@ -14,7 +16,24 @@ notifications:
   email: false
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("CodecLz4"); Pkg.test("CodecLz4"; coverage=true)'
+  - |
+    julia --depwarn=error -e '
+      VERSION >= v"0.7.0-DEV.3656" && using Pkg
+      if VERSION >= v"0.7.0-DEV.5183" && (isfile("Project.toml") || isfile("JuliaProject.toml"))
+          Pkg.build(); Pkg.test(coverage=true)
+      else
+          Pkg.clone(pwd()); Pkg.build("CodecLz4"); Pkg.test("CodecLz4"; coverage=true)
+      end'
 after_success:
-  - julia -e 'cd(Pkg.dir("CodecLz4")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
-  - julia -e 'Pkg.add("Documenter"); cd(Pkg.dir("CodecLz4")); include(joinpath("docs", "make.jl"))'
+  - |
+    julia -e '
+      VERSION >= v"0.7.0-DEV.3656" && using Pkg
+      VERSION >= v"0.7.0-DEV.5183" || cd(Pkg.dir("CodecLz4"))
+      Pkg.add("Coverage"); using Coverage
+      Codecov.submit(process_folder())'
+  - |
+    julia -e '
+      VERSION >= v"0.7.0-DEV.3656" && using Pkg
+      VERSION >= v"0.7.0-DEV.5183" || cd(Pkg.dir("CodecLz4"))
+      Pkg.add("Documenter");
+      include(joinpath("docs", "make.jl"))'
