--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,14 @@ language: julia
 os:
   - linux
   - osx
+  - windows
 julia:
   - 1.0
-  - 1.1
-  - 1.2
+  - 1.3
   - nightly
+arch:
+  - x64
+  - x86
 matrix:
   allow_failures:
     - julia: nightly
@@ -17,6 +20,11 @@ notifications:
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 jobs:
+  exclude:
+    - arch: x86
+      os: osx
+    - arch: x86
+      os: linux
   include:
     - stage: "Documentation"
       julia: 1.0
